--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -116,8 +116,10 @@
   .help-text-button {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
+    width: 30px;
     height: 40px;
-    margin-right: 15px;
+    margin-right: 7px;
     float: right;
     vertical-align: top;
     overflow: hidden;
